# Live_Rtmp2

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/dzm/rtmp2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dzm/rtmp2/: FVDialog.java  MainActivity.java  PushActivity.java
app/src/main/res/layout/: activity_fv.xml  activity_main.xml  activity_push.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/dzm/rtmp2/: ExampleUnitTest.java
chatsimple/: build.gradle
chatsimple/src/androidTest/java/com/dzm/chat/: ExampleInstrumentedTest.java
chatsimple/src/main/: AndroidManifest.xml
chatsimple/src/main/java/com/dzm/chat/: FVDialog.java  MainActivity.java  MainActivity2.java  MediaSerfaceView.java
chatsimple/src/main/res/layout/: activity_main.xml  activity_main2.xml  item_fv.xml
chatsimple/src/main/res/values/: strings.xml
chatsimple/src/test/java/com/dzm/chat/: ExampleUnitTest.java
livecollector/: build.gradle  proguard-rules.pro
livecollector/src/androidTest/java/com/dzm/collector/: ExampleInstrumentedTest.java
livecollector/src/main/: AndroidManifest.xml
livecollector/src/main/java/com/dzm/collector/: AudioSpecificConfig.java  LiveAudioEncode.java  LiveAudioGet.java  LiveBuild.java  LiveConfig.java  LiveEncode.java  LiveEncodeListener.java  LiveNativeInitListener.java  LiveRop.java  LiveRopMain.java  LiveVideoEncode.java  LiveVideoGet.java  VideoEncodeType.java  Yuv420Util.java
livecollector/src/main/res/values/: strings.xml
livecollector/src/test/java/com/dzm/collector/: ExampleUnitTest.java
liveffmpeg/: CMakeLists.txt  build.gradle
liveffmpeg/src/androidTest/java/com/dzm/ffmpeg/: ExampleInstrumentedTest.java
liveffmpeg/src/main/: AndroidManifest.xml
liveffmpeg/src/main/cpp/: Stream.cpp  Stream.h  native-lib.cpp
liveffmpeg/src/main/java/com/dzm/ffmpeg/: LiveFfmpegManager.java  LivePusher.java
liveffmpeg/src/main/res/values/: strings.xml
liveffmpeg/src/test/java/com/dzm/ffmpeg/: ExampleUnitTest.java
livepush/: CMakeLists.txt  build.gradle
livepush/src/androidTest/java/com/dzm/live/: ExampleInstrumentedTest.java
livepush/src/main/: AndroidManifest.xml
livepush/src/main/cpp/: DvrJni.cpp  Stream.cpp  Stream.h
livepush/src/main/cpp/include/libavutil/: ffversion.h
livepush/src/main/cpp/include/queue/: atomicops.h  concurrentqueue.h  readerwriterqueue.h
livepush/src/main/cpp/librtmp/: Android.mk  CMakeLists.txt  rtmp.c
livepush/src/main/java/com/dzm/live/: LiveManager.java  LivePusher.java  OnRtmpConnectListener.java
livepush/src/test/java/com/dzm/live/: ExampleUnitTest.java
